// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications matches snapshot for acceptCookies 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:hover {
  background-color: ,#be3c08,;
}

.c6:active {
  background-color: ,#b03808,;
}

.c6:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Privacy and cookies
      </div>
      <p
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This site uses cookies to optimize your experience on our platform. By continuing to use this site you agree to use our cookies. If you'd like more information or would like to opt out please see our <a href=\\"/privacy-policy\\" target=\\"blank\\">Privacy Policy</a>",
          }
        }
      />
      <div
        className="c4 c5"
      >
        <button
          className="c6"
          onClick={[Function]}
        >
          Got it!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for appMessage 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:hover {
  background-color: ,#be3c08,;
}

.c6:active {
  background-color: ,#b03808,;
}

.c6:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Notification
      </div>
      <p
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "asdf",
          }
        }
      />
    </div>
    <div
      className="c4 c5"
    >
      <button
        className="c6"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for retiredBookRedirect 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:hover {
  background-color: ,#be3c08,;
}

.c6:active {
  background-color: ,#b03808,;
}

.c6:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        New Edition
      </div>
      <p
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "You tried to access an old edition of this resource. You have been redirected to the newest edition.",
          }
        }
      />
      <div
        className="c4 c5"
      >
        <button
          className="c6"
          onClick={[Function]}
        >
          Got it!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for unknown notification 1`] = `null`;

exports[`Notifications matches snapshot for updateAvailable 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:hover {
  background-color: ,#be3c08,;
}

.c6:active {
  background-color: ,#b03808,;
}

.c6:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Updates Available
      </div>
      <p
        className="c3"
      >
        Click below to use the most recent version of this software.
      </p>
    </div>
    <div
      className="c4 c5"
    >
      <button
        className="c6"
        onClick={[Function]}
      >
        Update
      </button>
    </div>
  </div>
</div>
`;
